# MCP3202_testing

./: README.md  mcp3202_bitbang_test  mcp3202_bitbang_test.cpp  mcp3202_spidev_test  mcp3202_spidev_test.cpp
gpio-webui/: DRIVER_STANDARDS.md  MCP4922_INTEGRATION.md  Makefile  README.md  config.json  start.sh
gpio-webui/gpio-webui/: AUDIO_FEATURES.md  AdcSampler.cpp  AdcSampler.hpp  AudioPlaybackService.cpp  AudioPlaybackService.hpp  AudioProcessing.cpp  AudioProcessing.hpp  CallerIdDetector.cpp  CallerIdDetector.hpp  Ch1817Driver.cpp  Ch1817Driver.hpp  ConfigManager.cpp  ConfigManager.hpp  DacOutput.cpp  DacOutput.hpp  DacPlaybackFilters.cpp  DacPlaybackFilters.hpp  FilterProfileManager.cpp  FilterProfileManager.hpp  GpioManager.cpp  GpioManager.hpp  GwDac.hpp  GwDevice.cpp  GwDevice.hpp  GwProtocol.cpp  GwProtocol.hpp  GwTransport.cpp  GwTransport.hpp  HeaderPins.hpp  Ht9032Driver.cpp  Ht9032Driver.hpp  LineStateDetector.cpp  LineStateDetector.hpp  MCP3202.cpp  MCP3202.hpp  MCP4922.cpp  MCP4922.hpp  Makefile  McuPeripheral.hpp  PinConfig.hpp  (+25 more)
gpio-webui/gpio-webui/libs/audio_filters/: AudioFilters.cpp  AudioFilters.hpp
gpio-webui/gpio-webui/libs/fsk/: Fsk.cpp  Fsk.hpp
gpio-webui/mcu-adc/: CMakeLists.txt  HOST_INTEGRATION.md  README.md  tusb_config.h
gpio-webui/mcu-adc/src/: main.c
gpio-webui/mcu-adc/tools/: dac_adc_loopback_test.py  monitor_host_adc.py  read_mcu_adc.py
gpio-webui/protocol/: PROTOCOL.md  gw_protocol.h
